--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>This is version V2
-    </h1>
+    <h1>This is version V2 </h1>
+    <h2>This is the version V3</h2>
+    <h3>This is the version V4</h3>
+    <h4>This is the version V3</h4>
 </body>
 </html>
