this is the new version index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>This is version V2 </h1>
     <h2>This is the version V3</h2>   
-    <h2>YESH HAI NEW VERSION</h2>
+    <h2>YESH HAI NEW VERSIONs</h2>
 </body>
 </html>
